...
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    app:srcCompat="@android:drawable/ic_dialog_dialer" />

                <ImageButton
                    android:id="@+id/profileSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:backgroundTint="@color/purple_500"
                    android:outlineProvider="none"
...

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/HomePageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottomborder"
            android:gravity="center"
            android:text="Chinese Checkers"
            android:textSize="32sp" />

        <Button
            android:id="@+id/joinCasualLobbyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Ranked" />

        <Button
            android:id="@+id/joinPrivateLobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="private" />

        <TextView
            android:id="@+id/homePageGlobalChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
...
