<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobbyChatView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateLobbyChatFrag">

    <LinearLayout
        android:layout_width="0dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/leaveLobbyChatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Return to lobby" />

        <EditText
            android:id="@+id/MessageLobbyChat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="message"
...
